[gd_scene load_steps=10 format=3 uid="uid://diily036hleg3"]

[ext_resource type="Script" uid="uid://c6oui235m0f5r" path="res://scripts/wallpaper_screen.gd" id="1_85qqw"]
[ext_resource type="Texture2D" uid="uid://dr0cnls5qosnq" path="res://assets/sprites/wallpapers/thumbs/1.png" id="1_lh8on"]
[ext_resource type="Theme" uid="uid://cmppt7l8qjl3e" path="res://themes/Ventanas.tres" id="1_sgbgx"]
[ext_resource type="Theme" uid="uid://7o1ucgaksca5" path="res://themes/BarraArriba.tres" id="3_32a6s"]
[ext_resource type="Texture2D" uid="uid://nvk6f83viiq2" path="res://assets/sprites/wallpapers/thumbs/2.png" id="3_yu1wf"]
[ext_resource type="Texture2D" uid="uid://b7ae1npxlf5eg" path="res://assets/sprites/wallpapers/thumbs/3.png" id="4_8hojp"]
[ext_resource type="Texture2D" uid="uid://6h15csw4eg2v" path="res://assets/sprites/wallpapers/thumbs/4.png" id="5_sgbgx"]
[ext_resource type="Texture2D" uid="uid://c2fwhwqnqkfjw" path="res://assets/sprites/wallpapers/thumbs/5.png" id="6_32a6s"]
[ext_resource type="Texture2D" uid="uid://df1wo1u1k8kx" path="res://assets/sprites/wallpapers/thumbs/6.png" id="7_wmlco"]

[node name="WallpaperContainer" type="Panel"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.495
anchor_right = 0.5
anchor_bottom = 0.495
offset_left = -589.0
offset_top = -295.6
offset_right = 589.0
offset_bottom = 321.4
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sgbgx")
script = ExtResource("1_85qqw")
metadata/_edit_vertical_guides_ = [960.0]

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 4.0
offset_top = 5.00003
offset_right = -4.0
offset_bottom = 45.0
grow_horizontal = 2
theme = ExtResource("3_32a6s")

[node name="closebutton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -33.0
offset_top = 4.0
offset_right = -3.0
offset_bottom = 34.0
text = "x"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 33
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "custom_conf_menu"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 25

[node name="ButtonsContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/h_separation = 105
theme_override_constants/v_separation = 25
columns = 3

[node name="WallpaperButton1" type="TextureButton" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
texture_normal = ExtResource("1_lh8on")

[node name="WallpaperButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
texture_normal = ExtResource("3_yu1wf")

[node name="WallpaperButton3" type="TextureButton" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
texture_normal = ExtResource("4_8hojp")

[node name="WallpaperButton4" type="TextureButton" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
texture_normal = ExtResource("5_sgbgx")

[node name="WallpaperButton5" type="TextureButton" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
texture_normal = ExtResource("6_32a6s")

[node name="WallpaperButton6" type="TextureButton" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
texture_normal = ExtResource("7_wmlco")

[connection signal="mouse_entered" from="Panel/closebutton" to="." method="_on_button_hovered"]
[connection signal="pressed" from="Panel/closebutton" to="." method="_on_closebutton_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ButtonsContainer/WallpaperButton1" to="." method="_on_button_hovered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/WallpaperButton1" to="." method="_on_wallpaper_button_pressed" binds= [1]]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ButtonsContainer/WallpaperButton2" to="." method="_on_button_hovered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/WallpaperButton2" to="." method="_on_wallpaper_button_pressed" binds= [2]]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ButtonsContainer/WallpaperButton3" to="." method="_on_button_hovered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/WallpaperButton3" to="." method="_on_wallpaper_button_pressed" binds= [3]]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ButtonsContainer/WallpaperButton4" to="." method="_on_button_hovered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/WallpaperButton4" to="." method="_on_wallpaper_button_pressed" binds= [4]]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ButtonsContainer/WallpaperButton5" to="." method="_on_button_hovered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/WallpaperButton5" to="." method="_on_wallpaper_button_pressed" binds= [5]]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ButtonsContainer/WallpaperButton6" to="." method="_on_button_hovered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/WallpaperButton6" to="." method="_on_wallpaper_button_pressed" binds= [6]]
